rustdocs/errors/rust-bitcoin-hashes-src-sha256d-mod.rs.txt
error[E0432]: unresolved import `crate::sha256`
 --> ../rust-bitcoin/hashes/src/sha256d/mod.rs:5:5
  |
5 | use crate::sha256;
  |     ^^^^^^^^^^^^^ no `sha256` in the root

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `internal_macros`
 --> ../rust-bitcoin/hashes/src/sha256d/mod.rs:7:8
  |
7 | crate::internal_macros::general_hash_type! {
  |        ^^^^^^^^^^^^^^^ use of unresolved module or unlinked crate `internal_macros`

error[E0573]: expected type, found derive macro `Hash`
  --> ../rust-bitcoin/hashes/src/sha256d/mod.rs:13:6
   |
13 | impl Hash {
   |      ^^^^ not a type
   |
help: consider importing this trait instead
   |
 5 + use std::hash::Hash;
   |

error[E0404]: expected trait, found struct `crate::HashEngine`
  --> ../rust-bitcoin/hashes/src/sha256d/mod.rs:38:6
   |
38 | impl crate::HashEngine for HashEngine {
   |      ^^^^^^^^^^^^^^^^^ not a trait

error[E0573]: expected type, found derive macro `Hash`
  --> ../rust-bitcoin/hashes/src/sha256d/mod.rs:39:17
   |
39 |     type Hash = Hash;
   |                 ^^^^ not a type
   |
help: consider importing this trait instead
   |
 5 + use std::hash::Hash;
   |

error: aborting due to 5 previous errors

Some errors have detailed explanations: E0404, E0432, E0433, E0573.
For more information about an error, try `rustc --explain E0404`.
